--- a/.github/workflows/couplage1.yml
+++ b/.github/workflows/couplage1.yml
@@ -42,4 +42,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: figures
-        path: examples/mod1D
+        path: 'examples/mod1D/*.png'
