--- a/.github/workflows/couplage1.yml
+++ b/.github/workflows/couplage1.yml
@@ -8,6 +8,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  paths:
+    - 'examples/mod1D/couplage.py'
 
 jobs:
   build:
