--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pdoc3
+          pip install numpy matplotlib
           pdoc --html -o docs dromosense
           ls -al
 
