--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,5 +1,9 @@
 name: documentation
-on: [push]
+on:
+  push:
+    branches: [ master ]
+    paths:
+      - 'dromosense/'
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
