--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pdoc3
-          pip install numpy matplotlib
+          pip install numpy matplotlib scipy
           if [ -d docs ]; then rm -Rf docs; fi
           pdoc --html -o docs dromosense
           cd docs
